tests/types_first_reasons/temporary_string_dep.js
// @flow

const x = require('./temporary_string');
(x: 'bar'); // error: foo ~> bar
